fix scroll issue arising due to visibility modal window

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -355,13 +355,20 @@ table.striped>tbody>tr.active-player:nth-child(odd) {
 	transform: scale(1.15);
 	will-change: transform, opacity;
 	opacity: 0;
-	transition: transform 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946), opacity 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+	visibility: hidden;
+	transition: 
+		transform 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946), 
+		visibility 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946), 
+		opacity 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 	pointer-events: none;
 }
 .modal-wrapper {
-	transition: transform 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946), opacity 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+	transition: 
+		transform 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946), 
+		opacity 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 	pointer-events: auto;
 	opacity: 1;
+	visibility: visible;
 }
 
 
